--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -12,5 +12,12 @@
     "secure": true,
     "changeOrigin": true,
     "logLevel": "debug"
+  },
+  {
+    "context": ["/advance-books"],
+    "target": "http://localhost:3001",
+    "secure": true,
+    "changeOrigin": true,
+    "logLevel": "debug"
   }
 ]
